# file-explorer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  biome.json  build.rs  index.html  package.json
assets/: app.css
fe-types/: Cargo.toml
fe-types/src/: lib.rs
src/: app.css  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: context_menu.css  context_menu.rs  details.css  details.rs  grid.css  grid.rs  header.css  header.rs
