[package]
name = "file-explorer-ui"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.*"
css_mod = "0.1.*"
fe-types = { path = "./fe-types" }
postcard = { version = "1.1.*", features = ["alloc"] }
rclite = "0.2.*"
serde = { version = "1.*.*", features = ["derive"] }
serde-wasm-bindgen = "0.6.*"
sycamore = { version = "0.9.*", features = ["suspense"] }
wasm-bindgen = "0.2.*"
wasm-bindgen-futures = "0.4.*"
web-sys = { version = "0.3.*", features = ["AddEventListenerOptions"] }

[build-dependencies]
css_mod = "0.1.*"

[workspace]
members = [ "fe-types","src-tauri"]
resolver = "2"
